--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "eslint-plugin-unicorn": "^50.0.1",
     "husky": "^9.0.7",
     "jest": "^29.7.0",
-    "nodemon": "latest",
+    "nodemon": "^3.0.3",
     "prettier": "^3.2.4",
     "sort-package-json": "^2.7.0",
     "ts-jest": "^29.1.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3,"
   },
   "dependencies": {
     "react": "^18.2.0",
