--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "main": "index.js",
   "scripts": {
     "build": "WEBPACK_CLI_FORCE_LOAD_ESM_CONFIG=true webpack",
-    "serve": "WEBPACK_CLI_FORCE_LOAD_ESM_CONFIG=true webpack serve",
     "lint:check": "eslint --ignore-pattern \"dist/**/*\" --ignore-pattern \"node_modules/**/*\" .",
+    "lint:commit": "commitlint --verbose --config commitlint.config.mjs --from HEAD~1 --to HEAD",
     "lint:fix": "eslint --fix --ignore-pattern \"dist/**/*\" --ignore-pattern \"node_modules/**/*\" .",
+    "serve:e2e": "WEBPACK_CLI_FORCE_LOAD_ESM_CONFIG=true webpack serve --port 3001",
+    "serve": "WEBPACK_CLI_FORCE_LOAD_ESM_CONFIG=true webpack serve",
+    "setup:git-hooks":"husky install",
+    "test:e2e": "start-server-and-test serve:e2e http-get://localhost:3001 'cypress run'",
+    "test:unit": "jest .",
     "ts:check": "tsc"
   },
   "repository": {
@@ -27,21 +32,22 @@
     "@commitlint/types": "^18.6.0",
     "@jest/globals": "^29.7.0",
     "@types/eslint": "^8.56.2",
-    "@types/react": "^18.2.51",
     "@types/react-dom": "^18.2.18",
+    "@types/react": "^18.2.51",
     "@types/webpack": "^5.28.5",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "@typescript-eslint/types": "^6.20.0",
     "css-loader": "^6.10.0",
     "css-minimizer-webpack-plugin": "^6.0.0",
-    "eslint": "^8.56.0",
+    "cypress": "^13.6.4",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unicorn": "^50.0.1",
+    "eslint": "^8.56.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.0.7",
     "jest": "^29.7.0",
@@ -49,12 +55,13 @@
     "nodemon": "^3.0.3",
     "prettier": "^3.2.4",
     "sort-package-json": "^2.7.0",
+    "start-server-and-test": "^2.0.3",
     "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
-    "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.0"
+    "webpack-dev-server": "^5.0.0",
+    "webpack": "^5.90.1"
   },
   "dependencies": {
     "react": "^18.2.0",
