--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "WEBPACK_CLI_FORCE_LOAD_ESM_CONFIG=true webpack",
+    "check:all": "npm run lint:check & npm run ts:check",
     "lint:check": "eslint --ignore-pattern \"dist/**/*\" --ignore-pattern \"node_modules/**/*\" .",
     "lint:commit": "commitlint --verbose --config commitlint.config.mjs --from HEAD~1 --to HEAD",
     "lint:fix": "eslint --fix --ignore-pattern \"dist/**/*\" --ignore-pattern \"node_modules/**/*\" .",
@@ -32,8 +33,8 @@
     "@commitlint/types": "^18.6.0",
     "@jest/globals": "^29.7.0",
     "@types/eslint": "^8.56.2",
-    "@types/react-dom": "^18.2.18",
     "@types/react": "^18.2.51",
+    "@types/react-dom": "^18.2.18",
     "@types/webpack": "^5.28.5",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
@@ -41,13 +42,13 @@
     "css-loader": "^6.10.0",
     "css-minimizer-webpack-plugin": "^6.0.0",
     "cypress": "^13.6.4",
+    "eslint": "^8.56.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unicorn": "^50.0.1",
-    "eslint": "^8.56.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.0.7",
     "jest": "^29.7.0",
@@ -56,12 +57,14 @@
     "prettier": "^3.2.4",
     "sort-package-json": "^2.7.0",
     "start-server-and-test": "^2.0.3",
+    "styled-components": "^6.1.8",
     "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
+    "typescript-plugin-styled-components": "^3.0.0",
+    "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.0",
-    "webpack": "^5.90.1"
+    "webpack-dev-server": "^5.0.0"
   },
   "dependencies": {
     "react": "^18.2.0",
